--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10,6 +10,10 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+.text-justify-custom {
+  text-align: justify;
+  text-justify: inter-word;
+}
 body {
   margin: 0;
 }
