--- a/justified-nav.css
+++ b/justified-nav.css
@@ -76,7 +76,8 @@ body {
     border-radius: 0 5px 5px 0;
   }
   .container {
-      width: 970px;
+      width: 1100px;
+      max-width: 100%; 
     }
 }
 
