--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -738,6 +738,8 @@ pre code {
   overflow-y: scroll;
 }
 .container {
+  width: 1100px;
+  max-width: 100%; 
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
